[package]
name = "busstop"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/shiftrightonce/busstop"
keywords = ["webdev", "web"]
categories = ["asynchronous", "web-programming"]
license = "MIT"
description = "A command and query bus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
log = "0.4"
tokio = { version = "1.36", features = ["sync"] }


[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
simple_logger = "4.3"
rand = "0.8"
