[package]
name = "busstop"
version = "0.2.6"
edition = "2024"
repository = "https://github.com/shiftrightonce/busstop"
keywords = ["webdev", "web"]
categories = ["asynchronous", "web-programming"]
license = "MIT"
description = "A command and query bus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tracing = { version = "0.1", features = ["std"] }
tokio = { version = "1", features = ["sync"] }
simple-middleware = { version = "0.2" }
futures = { version = "0.3" }


[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"
